# game-of-life

./: CMakeLists.txt  ccc.txt  cell.cc  cell.h  grid  grid.cc  grid.h  inputLife.txt  main  main.cc  mmm.txt  pera.txt  testRunner.cc  ttt.txt
